crates/cli/tests/snapshots/check@cant_infer_lambda.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_infer_lambda.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_infer_lambda.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[27] Error:[0m Can't infer type of unannotated lambda
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/cant_infer_lambda.nemo:2:15 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m\[0m(z)[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mz[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m  │[0m               ─┬─  
 [38;5;240m  │[0m                ╰─── Can't infer type of unannotated lambda
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
