crates/cli/tests/snapshots/check@return_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/return_type_mismatch.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/return_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[15] Error:[0m Type mismatch. Expected Unit, but got I32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/return_type_mismatch.nemo:2:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m1
 [38;5;240m  │[0m          ┬  
 [38;5;240m  │[0m          ╰── Type mismatch. Expected Unit, but got I32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected I32, but got Unit
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/return_type_mismatch.nemo:6:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m{}
 [38;5;240m  │[0m          ─┬  
 [38;5;240m  │[0m           ╰── Type mismatch. Expected I32, but got Unit
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 2 errors"
