crates/cli/tests/snapshots/check@type_param_in_variant_struct.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/type_param_in_variant_struct.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/type_param_in_variant_struct.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[23] Error:[0m Can't declare type parameters for structs in a variant.
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/type_param_in_variant_struct.nemo:2:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249mc[0m[38;5;249mt[0m[38;5;249m [0mNone[38;5;249m[[0m[38;5;249ma[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m          ──┬─  
 [38;5;240m  │[0m            ╰─── Can't declare type parameters for structs in a variant.
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
