crates/cli/tests/snapshots/check@unknown_alternative.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_alternative.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_alternative.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[07] Error:[0m Unknown type V::Unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/unknown_alternative.nemo:6:6 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mV[0m[38;5;249m:[0m[38;5;249m:[0mUnknown[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m  │[0m      ───┬───  
 [38;5;240m  │[0m         ╰───── Unknown type V::Unknown
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type V::Unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/unknown_alternative.nemo:9:8 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m9 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mV[0m[38;5;249m:[0m[38;5;249m:[0mUnknown[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m        ───┬───  
 [38;5;240m  │[0m           ╰───── Unknown type V::Unknown
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 2 errors"
