crates/cli/tests/snapshots/run@arithmetic.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/arithmetic.nemo
    - "--output"
    - tests/build/arithmetic.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/arithmetic.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
