crates/cli/tests/snapshots/run@arrays.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/arrays.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/arrays.nemo
---
success: true
exit_code: 0
----- stdout -----
42
1
0

----- stderr -----
