crates/cli/tests/snapshots/run@block.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/block.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/block.nemo
---
success: true
exit_code: 0
----- stdout -----
1
2
4
0

----- stderr -----
